--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -5,6 +5,10 @@
 	.promo
 		&_header
 			font-size: 50px
+		&_subheader
+			font-size: 35px
+		&_text
+			font-size: 17px
 	.advantages
 		&_descr
 			width: 300px
@@ -13,9 +17,10 @@
 			width: 300px
 			height: 263px
 	.world
-		height: 517px
+		height: 617px
 		&_bg
-			height: 517px
+			height: 617px
+	
 	.footer
 		&_wrapper
 			padding-top: 0
@@ -52,7 +57,9 @@
 		&_header
 			font-size: 40px
 		&_subheader
-			font-size: 30px
+			font-size: 26px
+		&_text
+			font-size: 16px
 
 	.advantages
 		&_item
@@ -62,7 +69,7 @@
 			margin-top: 10px
 
 	.mobile
-		padding-bottom: 0
+		padding-bottom: 60px
 		&_item
 			width: 220px
 			height: 193px
@@ -71,6 +78,11 @@
 				font-size: 21px
 			&_plus
 				top: 150px
+
+	.world
+		height: 517px
+		&_bg
+			height: 517px
 
 	.title
 		font-size: 32px
@@ -135,3 +147,44 @@
 		&_phone
 			font-size: 16px
 			text-align: center
+	
+	.mobile
+		padding-bottom: 40px
+
+	.car
+		&_wrapper
+			img
+				width: 570px
+		&_bg2
+			height: 250px
+
+	.advantages
+		&_descr
+			width: 100%
+			font-size: 13px
+		&_round
+			width: 105px
+			height: 105px
+
+	.world
+		height: 417px
+		&_bg
+			height: 417px
+
+	.footer
+		&_wrapper
+			display: block
+		&_mobile
+			flex-direction: row
+			justify-content: center
+			margin-top: 10px
+		&_social
+			margin: 0 auto
+			margin-top: 10px
+
+@media ( max-width: 575px )
+	nav
+		height: 40px
+	.subheader
+		top: 40px
+	
