--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -196,7 +196,7 @@ nav
 			color: #1EACC7
 
 .mobile
-	height: 864px
+	min-height: 864px
 	padding: 46px 0 80px 0
 	background: url('../img/uber_mobile_bg.jpg') center (center / cover) no-repeat
 	&_item
@@ -347,7 +347,7 @@ nav
 .world
 	height: 717px
 	background: #080816
-	padding: 0 240px
+	padding: 0 10%
 	&_bg
 		position: relative
 		height: 717px
@@ -427,6 +427,8 @@ nav
 		padding-top: 32px
 	&_wrapper > div 
 		// width: 33%
+		&:nth-child(2)
+			order: -1
 		&:nth-child(3)
 			display: flex 
 			justify-content: flex-end
