--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -17,11 +17,9 @@ nav
 	padding: 14px 40px 14px 71px
 	margin: 0
 	list-style-type: none
-
 	&_item
 		padding-right: 35px
 		border-right: 1px dotted black
-
 	&_link
 		font-style: normal
 		font-weight: 300
@@ -35,27 +33,21 @@ nav
 	width: 100%
 	height: 87px
 	background-color: rgba(0, 0, 0, 0.6)
-
-	/* mix-blend-mode: normal;
-
 	&_logo
 		max-width: 100%
 		display: block
 		margin-top: 19px
-
 	&_official
 		font-style: normal
 		font-weight: 200
 		font-size: 13px
 		color: #FFFFFF
-
 	&_call
 		margin-top: 23px
 		font-weight: 300
 		font-size: 12px
 		text-align: right
 		color: #FFFFFF
-
 	&_phone
 		display: block
 		font-weight: normal
@@ -65,7 +57,6 @@ nav
 		color: #FFFFFF
 		text-decoration: none
 		line-height: 30px
-
 	&_btn
 		margin-top: 19px
 		width: 172px
@@ -75,7 +66,6 @@ nav
 		border-radius: 4px
 		font-weight: normal
 		font-size: 14px
-		// line-height: 46px
 		text-align: center
 		text-transform: uppercase
 		color: #FFFFFF
@@ -86,7 +76,6 @@ nav
 	min-height: 712px
 	background: url('../img/uber_bg.jpg') center (center / cover) no-repeat
 	padding: 140px 0 186px 0
-
 	&_header
 		margin: 0
 		font-weight: 900
@@ -94,7 +83,6 @@ nav
 		text-align: center
 		text-transform: uppercase
 		color: #FFFFFF
-
 	&_subheader
 		margin-top: 20px
 		font-weight: 700
@@ -102,14 +90,12 @@ nav
 		text-align: center
 		text-transform: uppercase
 		color: #FFFFFF
-
 	&_text
 		margin-top: 16px
 		font-weight: normal
 		font-size: 18px
 		text-align: center
 		color: #FFFFFF
-
 	&_btn
 		display: block
 		margin: 0 auto
@@ -126,21 +112,20 @@ nav
 		color: #FFFFFF
 		text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
 		@include btn_hover
-
 .title
-	margin-top: 33px
+	margin-top: 30px
 	font-weight: bold
 	font-size: 38px
 	text-align: center
 	text-transform: uppercase
 	color: #222222
+
 .title_white
 	color: #FFFFFF
 
 .sticker
 	display: block
 	margin: 0 auto
-	margin-top: 18px
 	width: 115px
 	height: 27px
 	background: #000000
@@ -151,6 +136,7 @@ nav
 	text-transform: uppercase
 	color: #FFFFFF
 	mix-blend-mode: normal
+
 .sticker_white
 	background: #FFFFFF
 	color: #070716
@@ -160,19 +146,18 @@ nav
 	font-size: 17px
 	text-align: center
 	color: #222222
+
 .subtitle_white
 	color: #FFFFFF
 
 .advantages
 	min-height: 849px
 	padding: 18px 0 48px 0
-
 	&_item
 		display: flex
 		justify-content: center
 		margin-left: 33px
 		margin-top: 26px
-
 	&_round
 		display: flex
 		justify-content: center
@@ -181,7 +166,6 @@ nav
 		height: 113px
 		background: #1EACC7
 		border-radius: 100%
-
 	&_descr
 		width: 343px
 		margin-left: 26px
@@ -189,7 +173,6 @@ nav
 		font-size: 15px
 		line-height: 21px
 		color: #202020
-
 		span
 			font-weight: 300
 			font-size: 17px
@@ -234,8 +217,6 @@ nav
 			&:hover
 				&::before, &::after
 					background: $second-color
-				
-				
 		&_1
 			background: url('../img/uber_mobile_app/uber_one_touch_checkout.jpg') center (center / cover) no-repeat
 		&_2
@@ -260,7 +241,7 @@ nav
 	&_bg1
 		position: relative
 		padding-top: 59px
-		height: 502px
+		min-height: 502px
 		background: #070716
 	&_bg2
 		height: 397px
@@ -273,32 +254,10 @@ nav
 		height: 480px
 		display: block
 		margin: 0 auto
-		margin-top: 54px
-
-// .choice 
-// 	position: relative
-// 	min-height: 895px
-// 	padding: 57px 0 138px 0
-// 	background: url('../img/car/uber_car_bg.jpg') center (center / cover) no-repeat
-// 	&_img 
-// 		position: relative
-// 		display: block
-// 		margin: 56px auto 0 auto
-// 		z-index: 2
-// 	&_descr 
-// 		text-align: center
-// 		color: #222222
-// 		font-size: 17px
-// 		font-weight: 300
-// 		line-height: 24px
-// 	.black 
-// 		position: absolute 
-// 		top: 0
-// 		left: 0
-// 		height: 499px
-// 		width: 100%
-// 		background-color: #070716
-// 		z-index: 1
+		font-weight: normal
+		font-size: 17px
+		text-align: center
+		color: #fff
 
 .condition
 	padding: 68px 0 87px 0
@@ -328,9 +287,6 @@ nav
 				position: absolute
 				left: -33px
 				top: 5px
-				// margin-right: 12px
-				// display: inline-block
-				// vertical-align: middle
 				width: 21px
 				height: 20px
 				background: url('../icon/uber_check_blue.png') center (center / cover) no-repeat
@@ -368,51 +324,6 @@ nav
 				text-transform: uppercase
 				color: #1FBAD6
 				text-decoration: none
-
-// footer
-// 	height: 133.5px
-// 	margin-top: 12px
-// 	padding: 0 0 40px 0
-// .footer
-// 	&_line
-// 		margin: 0 auto
-// 		width: 301px;
-// 		height: 7px;
-// 		background: #1FBAD6;
-// 	&_list1
-// 		margin-top: 31.5px
-// 		margin-bottom: 0
-// 		padding: 0
-// 		display: flex
-// 		justify-content: space-around
-// 		list-style-type: none
-// 		li a
-// 			text-decoration: none
-// 			font-weight: 300
-// 			font-size: 15px
-// 			text-transform: uppercase
-// 			color: #070716
-// 	&_list2
-// 		margin-top: 15px
-// 		margin-bottom: 0
-// 		padding: 0
-// 		display: flex
-// 		justify-content: space-between
-// 		list-style-type: none
-// 		li a
-// 			text-decoration: none
-// 			font-weight: 300
-// 			font-size: 11px
-// 			text-transform: uppercase
-// 			color: #999999
-// 	&_language
-// 		text-align: center
-// 		a
-// 		    text-decoration: none
-// 		    font-weight: normal
-// 		    font-size: 11px
-// 		    text-transform: uppercase
-// 		    color: #1FBAD6
 
 .footer
 	&_divider
