--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -20,7 +20,6 @@
 		height: 617px
 		&_bg
 			height: 617px
-	
 	.footer
 		&_wrapper
 			padding-top: 0
@@ -52,7 +51,6 @@
 		&_btn 
 			height: 40px	
 			width: 100%
-
 	.promo
 		&_header
 			font-size: 40px
@@ -60,14 +58,12 @@
 			font-size: 26px
 		&_text
 			font-size: 16px
-
 	.advantages
 		&_item
 			flex-direction: column
 			align-items: center
 		&_descr
 			margin-top: 10px
-
 	.mobile
 		padding-bottom: 60px
 		&_item
@@ -78,17 +74,12 @@
 				font-size: 21px
 			&_plus
 				top: 150px
-
 	.world
 		height: 517px
 		&_bg
 			height: 517px
-
 	.title
 		font-size: 32px
-	
-	.footer
-		&_mobile_item
 
 @media ( max-width: 767px )
 	.menu
@@ -135,29 +126,28 @@
 				&:nth-child(2)
 					display: none
 				&:nth-child(3)
-					transform: translateY(-3px) rotate(45deg)
-					
+					transform: translateY(-3px) rotate(45deg)		
 	.xs_hidden
 		display: none
-
 	.xs_visible
 		display: block
-
 	.subheader
 		&_phone
+			margin-top: 5px
 			font-size: 16px
 			text-align: center
-	
+		&_btn
+			margin-top: 0
+	.title
+		font-size: 26px
 	.mobile
 		padding-bottom: 40px
-
 	.car
 		&_wrapper
 			img
 				width: 570px
 		&_bg2
 			height: 250px
-
 	.advantages
 		&_descr
 			width: 100%
@@ -165,12 +155,12 @@
 		&_round
 			width: 105px
 			height: 105px
-
+		&_item
+			margin-left: 0
 	.world
 		height: 417px
 		&_bg
 			height: 417px
-
 	.footer
 		&_wrapper
 			display: block
@@ -184,7 +174,110 @@
 
 @media ( max-width: 575px )
 	nav
-		height: 40px
+		height: 30px
 	.subheader
-		top: 40px
-	
+		height: 60px
+		top: 30px
+		&_logo
+			width: 130px
+			height: 15px
+			margin-top: 20px
+		&_official
+			display: none
+		&_phone
+			margin-top: 0
+			font-size: 12px
+			text-align: right
+		&_btn
+			float: right
+			width: 110px
+			height: 22px
+			font-size: 10px
+	.hamburger
+		span
+			margin-bottom: 2px
+		&_active
+			span
+				margin-bottom: -2px
+	.promo
+		min-height: 500px
+		padding: 72px 0 34px 0
+		&_header
+			margin-top: 41px
+			font-size: 30px
+		&_subheader
+			margin-top: 33px
+			font-size: 20px
+		&_text
+			display: none
+		&_btn
+			margin-top: 73px
+	.title
+		font-size: 16px
+		margin-top: 16px
+	.subtitle
+		font-size: 14px
+	.advantages
+		padding-bottom: 38px
+		&_item
+			margin-top: 16px
+		&_descr
+			margin-top: 24px
+	.mobile
+		&_item
+			width: 290px
+			height: 254px
+			margin: 10px auto
+			&_title
+				font-size: 18px
+			&_plus
+				top: 204px
+	.car
+		&_wrapper
+			height: 190px
+			top: 85px
+			width: 100%
+			img
+				width: 100%
+		&_bg1
+			padding: 25px 0 31px 0
+		.title, .subtitle_white, .car_bg2
+			display: none
+	.condition
+		padding: 22px 0 30px 0
+		&_title
+			margin-bottom: 10px
+		&_wrapper
+			margin-top: 30px
+		&_wrapper2
+			margin-top: 30px
+		&_descr
+			margin-top: 15px
+		&_list
+			margin-bottom: 0
+	.world
+		&_bg
+			padding: 24px 0 29.5px 0
+			&_bottom
+				top: 315.5px
+	.footer
+		&_divider
+				margin-top: 24px
+				width: 80%
+		&_links
+			width: 100%
+			&_main
+				margin-top: 21px
+				width: 100%
+				a
+					font-size: 14px
+			&_sub
+				width: 100%
+				flex-wrap: wrap
+				justify-content: space-around
+				a
+					margin: 11px 28px 0 28px
+		&_mobile
+			justify-content: space-around
+			img
+				margin: 3px 0 30px 0
